--- a/app/src/main/res/layout/activity_card_layout_group_info.xml
+++ b/app/src/main/res/layout/activity_card_layout_group_info.xml
@@ -129,11 +129,11 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="5dp">
 
-                <ToggleButton
+                <ImageView
                     android:id="@+id/tb_members"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:background="@drawable/selector_members"
+                    android:background="@drawable/group_member"
                     android:textOff=""
                     android:textOn=""
                     android:checked="false" />
